--- a/TestTab2/app/src/main/res/values/strings.xml
+++ b/TestTab2/app/src/main/res/values/strings.xml
@@ -6,4 +6,21 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="navigation_drawer_open">Open nav</string>
     <string name="navigation_drawer_close">Close nav</string>
+
+
+    <string name="action_settings">Settings</string>
+    <string name="dialog_action_ok">OK</string>
+    <string name="dialog_action_cancel">Cancel</string>
+    <string name="dialog_error_title">Sorry</string>
+
+    <string name="empty_ribots">There aren\'t any ribots</string>
+    <string name="error_loading_ribots">There was a problem loading the ribots</string>
+
+    <string name="permission_required">Permission required</string>
+    <string name="permission_explanations" >BablApp needs to read contacts in order to work appropriately. Please grant permission.</string>
+
+    <string name="no_internet_error">Cannot connect to server</string>
+    <string name="sql_error">Error reading app database</string>
+    <string name="no_record_error">There is no available Babl</string>
+    <string name="unknown_error">Unknown error</string>
 </resources>
